<resources>
    <string name="app_name">launcher</string>

    <string name="recommend_title">%1$s（%2$s）</string>
    <string name="goods_price">¥%1$s</string>
    <string name="order_department">科室：%1$s</string>
    <string name="order_bed">床号：%1$s</string>
    <string name="order_name">姓名：%1$s</string>

    <string name="active_pad_tip">请用中科云上运维工具扫描以上二维码进行激活!</string>
    <string name="this_pad_has_not_actived">PAD未激活</string>
    <string name="please_choose_payment">请选择支付方式</string>
    <string name="alipay_payment_default">支付宝支付(默认)</string>
    <string name="wechat_payment">微信支付</string>
    <string name="amount_payable">应付金额</string>
    <string name="pay_success_payment">支付方式:</string>
    <string name="pay_success_money">支付金额:</string>
    <string name="next">下一步</string>
    <string name="pad_has_actived_success">PAD已激活</string>
    <string name="pad_has_actived_fail">PAD激活失败</string>
    <string name="pad_has_actived_tip">辛苦了运维同事，感谢您的不辞辛劳！</string>
    <string name="vip_count_down_time">VIP剩余时长:</string>
    <string name="ble_dddw_tip">您的点滴已打完\n请呼叫护士为您拔针</string>
    <string name="cabinet_dec">屏安柜是中科云上自主研发的，针对住院病人\n及其陪护人员的一体化服务设备。</string>
    <string name="company_dec">
                            中科云上开发一款专属定制平板电脑，专利气囊摇臂支架连接宝柜，不仅为患者提供丰富的娱乐、服务、医疗信息等服务 功能，更方便医院自身宣传信息、科普知识等内容，极大的节省了护士工作量。
                        </string>
    <string name="staisfaction_tip">温馨提示,问卷调查完毕才能关闭此页面</string>
    <string name="card_card">住院卡号</string>
    <string name="card_time">入院时间</string>
    <string name="card_info">病&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;情</string>
    <string name="card_doctor">主治医生</string>
    <string name="card_nurse">责任护士</string>
    <string name="card_notice">温馨提示：请注意定时喝水！</string>
    <string name="dialog_hint">当前视频免费时长已用完，微信扫码支付后三万部影片任您畅看</string>
</resources>
